# golf-course-segmentation

./: .env.local.example  .gitignore  .vercelignore  INFO.md  LICENSE  README.md  REPLICATION_PLAN.md  next.config.js  package.json  pyproject.toml  test_unet_on_ucmerced.py
api/: Dockerfile  README.md  app.py  main.py  requirements.txt  test_local.py
app/: globals.css  layout.tsx  page.tsx
app/api/ai-annotate/: route.ts
app/api/gpt-classify/: route.ts
app/api/sam-annotate/: route.ts
app/classification/: page.tsx
app/segmentation/: page.tsx
classifier/: train_classifier.ipynb
classifier/augmented/: README.md  train_classifier.py
components/: AnnotationCanvas.tsx  ClassificationCapture.tsx  DatasetCapture.tsx  DatasetViewer.tsx  ExportDatasetDialog.tsx  Footer.tsx  Header.tsx  Legend.tsx  MapArea.tsx  PasswordGate.tsx  Sidebar.tsx  Statistics.tsx  WorkflowSelector.tsx
components/ui/: slider.tsx
notebooks/: unet_golf_segmentation.ipynb  unet_golf_segmentation.py  unet_golf_segmentation_tf.py  unet_resnet50_large.ipynb  unet_resnet50_large.py
notebooks/paper_replication/: evaluate_resnet50_testset.py  test_custom_images.py  test_resnet50_on_ucmerced.py  unet_resnet50_large.py
scripts/: visualize_dataset_examples.py
types/: dataset.ts  segmentation.ts
utils/: datasetStorage.ts
