[project]
name = "golf-course-segmentation"
version = "0.1.0"
description = "Deep learning semantic segmentation of golf course features"
requires-python = ">=3.10"
dependencies = [
    # TensorFlow dependencies (primary)
    "tensorflow>=2.15.0",
    "tensorboard>=2.15.0",
    # PyTorch dependencies (alternative)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    # Shared dependencies
    "kagglehub>=0.2.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
